samples/_failures_safe/1761726532_936399_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc796f91.c: In function ‘main’:
./samples/SAFE/__tmp_bc796f91.c:179:13: error: expected expression at end of input
  179 |             case
      |             ^~~~
./samples/SAFE/__tmp_bc796f91.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc796f91.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc796f91.c:179:13: error: expected declaration or statement at end of input
